--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
-Django==2.2.4
-django-polls==0.1
+certifi==2019.9.11
+coverage==4.5.4
+Django==2.2.8
+django-polls==0.1.0
 django-polymorphic==2.1.2
 djangorestframework==3.10.3
+pipenv==2018.11.26
 pytz==2019.2
 sqlparse==0.3.0
+virtualenv==16.7.7
+virtualenv-clone==0.5.3
