--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "react-router-dom": "^5.1.2",
-    "reload": "^3.0.4"
+    "reload": "^3.0.4",
+    "serialize-javascript": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
